# rust-cmcs

./: .gitignore  Cargo.toml  README.md  run_server.sh
.github/workflows/: compile_and_deploy.yml
src/: func_plot.rs  lib.rs  mandelbrot.rs  plot3d.rs  utils.rs
src/cellular_automata/: automaton_2d.rs  block_automaton.rs  common.rs  elementary_automaton.rs  forest_fire.rs  game_of_life.rs  maze_solver.rs  mod.rs  sand_hourglass.rs
src/cellular_automata/game_of_life/: states.rs
src/chemical_reactions/: mod.rs  ode_simulation.rs  reaction.rs
src/continuous_dynamical_systems/: linear_birth_model.rs  logistic_equation.rs  lotka_volterra.rs  male_female_fish_population.rs  mod.rs  sir_model.rs
src/discrete_dynamical_systems/: linear_birth_death_model.rs  linear_birth_model.rs  logistic_equation.rs  male_female_fish_population.rs  mod.rs
src/discrete_event_simulation/: customer_queue.rs  discete_event_simulation.rs  mod.rs
src/multiset_rewriting/: frog_l_e_complexes.rs  minimal_probabilistic_p_system.rs  mod.rs
src/stochastic_simulation/: enzimatic_activity.rs  enzymatic_activity.rs  lotka_volterra.rs  mod.rs  negative_feedback_loop.rs  stochastic_simulation_algorithm.rs
src/utils/: phase_graph.rs  simulation_limits.rs
www/: index.html
www/example/: index.html  index.js
www/lbm/: index.html  index.js
www/linear_birth_death_model/: index.html  index.js
www/linear_birth_model/: index.html
www/linear_birth_model_with_migration/: index.html  index.js
www/logistic_equation/: index.html
www/male_female_fish_population/: index.js
www/old/: index.html  index.js
(+75 files in other folders)
