[package]
name = "wasm-demo"
version = "0.1.0"
authors = ["Yuri Andriaccio <yurand2000@gmail.com"]
edition = "2018"

[lib]
crate-type=["cdylib"]

[dependencies]
plotters = "0.3.5"
wasm-bindgen = "0.2.92"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement"] }
plotters-canvas = "0.3.0"
ode_solvers = "0.4.0"

[profile.release]
lto = true
