[package]
name = "rust-cmcs"
version = "0.1.0"
authors = ["Yuri Andriaccio <yurand2000@gmail.com"]
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
plotters = "0.3.5"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement"] }
plotters-canvas = "0.3.0"
ode_solvers = "0.4.0"
num = "0.4.3"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
getrandom = { version = "0.2.15", features = ["js"] }

[profile.release]
lto = true
